--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body style="margin :0; padding:0; background-color :powderblue;">
     <h1 style="background-color:blue;">demo</h1>
     <h1>hello</h1>
+    <p style="font-size: 20px; font-weight: bold;border: 1px solid black;padding: 50px;">This is paragraph</p>
     <a href="https://www.google.com/" target="_blank">
         <img src="./img_forest.jpg">
     </a><br>
