--- a/index.html
+++ b/index.html
@@ -18,10 +18,35 @@
     <h1 style="background-color:blue;">demo</h1>
     <h1>hello</h1>
     <p style="font-size: 20px; font-weight: bold;border: 1px solid black;padding: 50px;">This is paragraph</p>
-    <a href="https://www.google.com/" target="_blank">
-        <img src="./img_forest.jpg">
-    </a><br>
+    <a href="https://www.google.com/" target="_blank">Google<br>
+        <img src="./img_forest.jpg"></a><br>
+
     <a href="mailto:rithikapoojary07@gmail.com">email : rithikapoojary07@gmail.com</a> <br>
+
     <a href="tel:9148665434">contact number : 9148665434</a><br>
+
+    <a href="#c4">Chapter 4</a><br>
+    <a href="#c10">Chapter 10</a><br>
+    <h3>Chapter 1</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 2</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 3</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3 id="c4">Chapter 4</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 5</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 6</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 7</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 8</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    <h3>Chapter 9</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
+    
+    <h3 id="c10">Chapter 10</h3>
+    <p>Google LLC is an American multinational technology company focusing on search engine technology, online advertising, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</p>
 </body>
 </html>
